# catalystcoop-handbook

./: .pre-commit-config.yaml  .readthedocs.yml  MANIFEST.in  README.md  README.rst  environment.yml  pyproject.toml  setup.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: docs-build.yml  tox-pytest.yml
docker/: Dockerfile
docs/: articles_of_incorporation.md  basic_expectations.md  benefits.md  bylaws.md  catalyst_101.md  catalyst_howtos.md  catalyst_values.md  conf.py  handbook_howtos.md  index.md  index.rst  markdown_test.md  policies.md  reimbursement.md  retirement_accounts.md  time_tracking.md
docs/bylaws/: article_I.md  article_II.md  article_III.md  article_IV.md  article_IX.md  article_V.md  article_VI.md  article_VII.md  article_VIII.md  article_X.md  article_XI.md  article_XII.md  article_XIII.md  article_XIV.md  index.md
docs/policies/: index.md
src/handbook/: __init__.py  cli.py
src/policy_handbook/: __init__.py  cli.py
tests/integration/: console_scripts_test.py  dummy_test.py
tests/unit/: dummy_test.py
