[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "catalystcoop.handbook"
description="The Catalyst Cooperative Member Handbook"
readme = { file = "README.md", "content-type" = "text/markdown" }
authors = [{ name = "Catalyst Cooperative", email = "hello@catalyst.coop" }]
requires-python = ">=3.13,<3.14"
license = { file = "LICENSE.txt" }
version = "v2026.01.09"
dependencies = [
    "furo>=2025",
    "mdformat>=1",
    "mdformat-myst>=0.1.5",
    "myst-parser>=4",
    "pre-commit>=4",  # Allow us to run pre-commit hooks in testing
    "sphinx>8",  # The default Python documentation engine
    "sphinx-issues>=5",  # Allows references to GitHub issues
]

[tool.hatch.envs.default.scripts]
docs-build = [
    "rm -rf docs/_build",
    "mdformat docs/",
    "sphinx-build -W -b html docs docs/_build/html",
]

[tool.hatch.build.targets.wheel]
packages = ["src/handbook"]
